# litebook

./: Cargo.toml  README.md  litebook.pyi  pyproject.toml
.github/workflows/: build.yml  release.yml
benchmarks/: book.py  order.py
litebook/: __init__.py  bench.py  book.py  order.py
src/: lib.rs
tests/: __init__.py  test_book.py  test_order.py  utils.py
