[project]
name = "litebook"
version = "0.0.0"
description = "A pure-Python limit order book with tick sizes, market depth and visualization."
license = {text = "MIT License"}
keywords = ["limit order book", "order book"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sortedcontainers>=2.4.0",
]

[project.urls]
repository = "https://github.com/pnxenopoulos/litebook"

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.8.1",
    "sphinx>=8.1.3",
]

# Test & Coverage
[tool.coverage.run]
branch = true
source = ["litebook"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Ruff
[tool.ruff.lint.pydocstyle]
convention = "google"

# MyPy
[tool.mypy]
exclude = "tests/"

[[tool.mypy.overrides]]
module = "sortedcontainers"
ignore_missing_imports = true
