[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "litebook"
version = "0.0.1"
description = "A fast limit order book in Python utilizing a Rust backend"
license = {text = "MIT License"}
keywords = ["limit order book", "order book"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
repository = "https://github.com/pnxenopoulos/litebook"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.9.3",
]

# UV Tool Configuration
[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
